--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--
+Home page for app with welcome screen
+-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,9 +15,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
 </head>
 <body>
-<nav>
-Unchained
-</nav>
+
+<nav>Unchained</nav>
 
 <!-- Carousel
 ================================================== -->
@@ -67,5 +69,6 @@ Unchained
   </a>
 </div><!-- /.carousel -->
 
+<script src="./res/scripts/main.js"></script>
 </body>
 </html>
