--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@ Home page for app with welcome screen
 </main>
 
 
-
-<script src="./res/scripts/main.js"></script>
+<script src="./res/scripts/index.js"></script>
 
 </body>
 </html>
