--- a/signup.html
+++ b/signup.html
@@ -24,11 +24,32 @@ Sign up
 <main>
 	<!--Interest selection-->
 	<section>
-		<h3>I'm interested in...</h3>
-		<button class="interest">Food</button>
-		<button class="interest">Clothing</button>
-		<button class="interest">Entertainment</button>
-		<button class="interest">Souveneirs</button>
+		<h4>I'm interested in...</h4><br>
+
+		<div class="switch switch-pink">
+			<input type="checkbox" name="switch2Value" id="switch2" checked>
+			<h4>Food</h4>
+		</div>
+
+		<div class="switch switch-blue">
+			<input type="checkbox" name="switch2Value" id="switch2" checked>
+			<h4>Entertainment</h4>
+		</div>
+
+		<div class="switch switch-green">
+			<input type="checkbox" name="switch2Value" id="switch2" checked>
+			<h4>Clothing</h4>
+		</div>
+
+		<div class="switch switch-yellow">
+			<input type="checkbox" name="switch2Value" id="switch2" checked>
+			<h4>Souvenirs</h4>
+		</div>
+
+		<div class="switch switch-pink">
+			<input type="checkbox" name="switch2Value" id="switch2" checked>
+			<h4>Surprise me!</h4>
+		</div>
 	</section>
 </main>
 
