--- a/core.html
+++ b/core.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <link href="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.css"
           rel="stylesheet">
+
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
+
+    <script src="res/scripts/map.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbD4DRMpWG4WEMKU4VVeyLEPWV_DBLvKY&callback=initMap" async defer
+            type="text/javascript"></script>
+
     <script type="text/javascript"
             src="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.js"></script>
     <script>
@@ -26,6 +33,17 @@
                 $('#sidebar').removeClass('open');
             });
 
+            $("#maps").hide();
+
+            $("#home-tab").click(function(){
+                $("#maps").hide();
+                $("#home").show();
+            });
+            $("#maps-tab").click(function(){
+                $("#maps").show();
+                $("#home").hide();
+            });
+
         });
 
 
@@ -46,11 +64,19 @@
         })(jQuery);
     </script>
 
+
+    <style>
+        #map {
+            height: 500px;
+            width: 500px;
+        }
+    </style>
+
     <title></title>
 
 </head>
 
-<body class="" style="padding-top: 171px; height: 2195px;">
+<body class="" style=" height: 2195px;">
 
 
 <div class="navigation-drawer-overlay"></div>
@@ -195,10 +221,10 @@
         <div class="row">
             <!--nav-justified-->
             <ul class="nav nav-tabs  nav-tab-yellow" role="tablist">
-                <li role="presentation" class="active"><a class="border-green" href="#tab1" aria-controls="home"
+                <li role="presentation" class="active"><a  id="home-tab" class="border-green" href="#" aria-controls="home"
                                                           role="tab" data-toggle="tab" aria-expanded="true"><i class="icon material-icons">home</i></a>
                 </li>
-                <li role="presentation" class=""><a href="#tab2" aria-controls="profile" role="tab" data-toggle="tab"
+                <li role="presentation" class=""><a id="maps-tab" href="#" aria-controls="profile" role="tab" data-toggle="tab"
                                                     aria-expanded="false">Tab 2</a></li>
                 <!--<li role="presentation" class=""><a href="#tab3" aria-controls="messages" role="tab" data-toggle="tab"-->
                                                     <!--aria-expanded="false">Tab 3</a></li>-->
@@ -216,10 +242,15 @@
 
     <div class="container">
 
-        <div class="row">
+        <div id="home" class="row">
+            TEST 1
+        </div>
 
+        <div id="maps" class="row">
+            <div id="map"></div>
         </div>
     </div>
+
 
 </div>
 <script type="text/javascript" src="https://cdn.rawgit.com/Prinzhorn/skrollr/master/dist/skrollr.min.js"></script>
