--- a/core.html
+++ b/core.html
@@ -2,17 +2,22 @@
 <html lang="en" class="skrollr skrollr-desktop">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.css"
-          rel="stylesheet">
+    <!--<link href="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.css"-->
+          <!--rel="stylesheet">-->
 
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
+
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
     <script src="res/scripts/map.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbD4DRMpWG4WEMKU4VVeyLEPWV_DBLvKY&callback=initMap" async defer
             type="text/javascript"></script>
 
-    <script type="text/javascript"
-            src="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.js"></script>
+    <!--<script type="text/javascript"-->
+            <!--src="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.js"></script>-->
+
+    <scrip type="text/javascript" src="res/scripts/material-bootstrap.min.js"></scrip>
     <script>
         $(document).ready(function () {
 
@@ -64,11 +69,20 @@
         })(jQuery);
     </script>
 
+    <link rel="stylesheet" type="text/css" href="res/styles/material-bootstrap.css">
 
     <style>
         #map {
             height: 500px;
             width: 500px;
+        }
+
+        .breather-sml{
+            height:5px;
+        }
+
+        body {
+            padding-top: 112px;
         }
     </style>
 
@@ -243,7 +257,42 @@
     <div class="container">
 
         <div id="home" class="row">
-            TEST 1
+            <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="res/images/signup-food.png" alt="" class="img-responsive">
+                        <div class="carousel-caption">
+                            Insert your text here !
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="breather-sml"></div>
+
+            <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="res/images/signup-food.png" alt="" class="img-responsive">
+                        <div class="carousel-caption">
+                            Insert your text here !
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="breather-sml"></div>
+
+            <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="res/images/signup-food.png" alt="" class="img-responsive">
+                        <div class="carousel-caption">
+                            Insert your text here !
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div id="maps" class="row">
