--- a/core.html
+++ b/core.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" class="skrollr skrollr-desktop">
-<head>
-    <meta charset="UTF-8">
-    <!--<link href="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.css"-->
-          <!--rel="stylesheet">-->
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
 
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
+        <!--<link rel="stylesheet" type="text/css" href="res/styles/material-bootstrap.css">-->
+        <!--<script type="text/javascript" src="res/scripts/material-bootstrap.min.js"></script>-->
 
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+        <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+
+    <link href="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.css" rel="stylesheet">
+
+    <script type="text/javascript"
+    src="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.js"></script>
+
 
     <script src="res/scripts/map.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbD4DRMpWG4WEMKU4VVeyLEPWV_DBLvKY&callback=initMap" async defer
             type="text/javascript"></script>
 
-    <!--<script type="text/javascript"-->
-            <!--src="https://cdn.rawgit.com/band-x-media/SASS-Material-Design-for-Bootstrap/master/dist/material-bootstrap.min.js"></script>-->
-
-    <scrip type="text/javascript" src="res/scripts/material-bootstrap.min.js"></scrip>
     <script>
         $(document).ready(function () {
 
@@ -69,7 +72,75 @@
         })(jQuery);
     </script>
 
-    <link rel="stylesheet" type="text/css" href="res/styles/material-bootstrap.css">
+    <style>
+        #map {
+            height: 500px;
+            width: 500px;
+        }
+
+        .breather-sml{
+            height:5px;
+        }
+
+        body {
+            padding-top: 112px;
+        }
+    </style>
+
+    <title></title>
+
+
+    <script>
+        $(document).ready(function () {
+
+            var overlay = $('.sidebar-overlay');
+
+            $('.sidebar-toggle').on('click', function () {
+                var sidebar = $('#sidebar');
+                sidebar.toggleClass('open');
+                if ((sidebar.hasClass('sidebar-fixed-left') || sidebar.hasClass('sidebar-fixed-right')) && sidebar.hasClass('open')) {
+                    overlay.addClass('active');
+                } else {
+                    overlay.removeClass('active');
+                }
+            });
+
+            overlay.on('click', function () {
+                $(this).removeClass('active');
+                $('#sidebar').removeClass('open');
+            });
+
+            $("#maps").hide();
+
+            $("#home-tab").click(function(){
+                $("#maps").hide();
+                $("#home").show();
+            });
+            $("#maps-tab").click(function(){
+                $("#maps").show();
+                $("#home").hide();
+            });
+
+        });
+
+
+        (function ($) {
+
+            var dropdown = $('.sidebar .dropdown');
+
+//	Add slidedown animation to dropdown
+            dropdown.on('show.bs.dropdown', function (e) {
+                $(this).find('.dropdown-menu').first().stop(true, true).slideDown();
+            });
+
+//	Add slideup animation to dropdown
+            dropdown.on('hide.bs.dropdown', function (e) {
+                $(this).find('.dropdown-menu').first().stop(true, true).slideUp();
+            });
+
+        })(jQuery);
+    </script>
+
 
     <style>
         #map {
@@ -260,7 +331,7 @@
             <div id="mycarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="res/images/signup-food.png" alt="" class="img-responsive">
+                        <img src="res/images/food/brunch_spread.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
                             Insert your text here !
                         </div>
@@ -273,7 +344,7 @@
             <div id="mycarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="res/images/signup-food.png" alt="" class="img-responsive">
+                        <img src="res/images/food/coffee.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
                             Insert your text here !
                         </div>
@@ -286,7 +357,33 @@
             <div id="mycarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="res/images/signup-food.png" alt="" class="img-responsive">
+                        <img src="res/images/food/roasted_pork_and_scrambled_egg_burrito_with_some_red_pepper_salsa.jpg" alt="" class="img-responsive">
+                        <div class="carousel-caption">
+                            Insert your text here !
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="breather-sml"></div>
+
+            <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="res/images/food/strawberry_cheesecake.jpg" alt="" class="img-responsive">
+                        <div class="carousel-caption">
+                            Insert your text here !
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="breather-sml"></div>
+
+            <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="res/images/food/halal.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
                             Insert your text here !
                         </div>
