Added Captions to coupons.

--- a/core.html
+++ b/core.html
@@ -330,6 +330,7 @@
                     <div class="item active">
                         <img src="res/images/food/brunch_spread.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
+                            <h1>Brunch</h1>
                             Insert your text here !
                         </div>
                     </div>
@@ -343,6 +344,7 @@
                     <div class="item active">
                         <img src="res/images/food/coffee.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
+                            <h1>Coffee</h1>
                             Insert your text here !
                         </div>
                     </div>
@@ -356,6 +358,7 @@
                     <div class="item active">
                         <img src="res/images/food/roasted_pork_and_scrambled_egg_burrito_with_some_red_pepper_salsa.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
+                            <h1>Burrito Deal!</h1>
                             Insert your text here !
                         </div>
                     </div>
@@ -369,6 +372,7 @@
                     <div class="item active">
                         <img src="res/images/food/strawberry_cheesecake.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
+                            <h1>Cheesecake Factory</h1>
                             Insert your text here !
                         </div>
                     </div>
@@ -382,6 +386,7 @@
                     <div class="item active">
                         <img src="res/images/food/halal.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
+                            <h1>Halal Guys</h1>
                             Insert your text here !
                         </div>
                     </div>
