--- a/signup.html
+++ b/signup.html
@@ -68,7 +68,7 @@ Sign up
 			</div>
 			<br>
 
-			<a role="button" class="btn btn-primary" id="interest-filter">Filter</a>
+			<a role="button" class="btn btn-primary" id="filter-interest">Filter</a>
 		</div>
 	</div>
 </main>
