--- a/coupon1.html
+++ b/coupon1.html
@@ -103,9 +103,9 @@ A detailed view of a coupon
 <body>
 
 <div class="navigation-drawer-overlay"></div>
-<nav class="app-bar  app-bar-has-tabs  elevated-1 app-bar-static app-bar-translucent bg-cyan">
+<nav class="app-bar elevated-1 app-bar-static app-bar-translucent bg-cyan">
     <a class="navigation-drawer-toggle" href="#">
-        <i class="icon icon-lg material-icons text-white">menu</i>
+        <i class="icon icon-lg material-icons text-white">menu=</i>
     </a>
 
     <h1 class="title">
