--- a/core.html
+++ b/core.html
@@ -77,8 +77,8 @@
 
     <style>
         #map {
-            height: 500px;
-            width: 500px;
+            height: 100%;
+            width: 100%;
         }
 
         .breather-sml{
