Added left chevron glyphicon in app bar.

--- a/detail.html
+++ b/detail.html
@@ -164,8 +164,8 @@
 
     <a class="navigation-drawer-toggle" href="#">
 
-        <!--<span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>-->
-        <i class="icon icon-lg material-icons text-white">menu</i>
+        <!--<span class="glyphicon glyphicon-chevron-left"></span>-->
+        <!--<i class="icon icon-lg material-icons text-white">menu</i>-->
 
     </a>
 
@@ -202,7 +202,7 @@
                                 <strong>
                                     <h1 style="color: #00BCD4 ">COUPON-1</h1>
                                 </strong>
-                            </div> 
+                            </div>
                         </div>
                     </div>
                 </div>
