--- a/george/map.html
+++ b/george/map.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,10 +22,10 @@
 	</head>
 
 	<body>
-
 		<div id="map"></div>
 		<h1>Hello, world!</h1>
-
+		
+		
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbD4DRMpWG4WEMKU4VVeyLEPWV_DBLvKY&callback=initMap" async defer
 	  type="text/javascript"></script>
 	  <script>
