--- a/core.html
+++ b/core.html
@@ -147,8 +147,10 @@
 
     <style>
         #map {
-            height: 500px;
-            width: 500px;
+            margin-top: -112px;
+            position: absolute;
+            height: 100%;
+            width: 100%;
         }
 
         .breather-sml{
@@ -158,17 +160,36 @@
         body {
             padding-top: 112px;
         }
+        .diamond {
+            width: 2.5em;
+        }
+        .coupon-top {
+            background-color: rgba(0, 0, 0, .4);
+            color: white;
+            position: absolute;
+            padding: .5em;
+            font-size: 1;
+            right: 5px; top: 5px;
+            text-align: right;
+        }
+
+        .coupon-top span {
+            padding-left: .8em;
+        }
+        .coupon-bottom {
+            background-color: rgba(0, 0, 0, .4);
+            position: relative;
+            width: 100%;
+            padding: 1em;
+            font-size: 1.2em;
+        }
     </style>
 
-    <title></title>
-
+    <title>Unchained</title>
 </head>
 
 <body>
 
-<style type='text/css'>
-    body {padding-top: 112px;}
-</style>
 <div class="navigation-drawer-overlay"></div>
 
 <aside id="navigation-drawer"
@@ -176,100 +197,41 @@
        role="navigation">
 
     <div class="wrapper">
-
         <div class="navigation-drawer-brand">
-
-            <h4>Profile</h4>
-
+            <h4>Unchained</h4>
         </div>
 
         <div class="navigation-drawer-divider"></div>
 
         <nav class="navigation-drawer-nav">
-
             <ul class="list-level-1">
-
                 <li>
-                    <!--<a href="/SASS-Material-Design-for-Bootstrap/">-->
-                        <!--Profile-->
-                    <!--</a>-->
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="panel-heading">
-                                <img src="res/images/user_avatar.png" alt="" class="img-circle "height="100" width="100"/><br/>
-                                <h3 class="profile-title">Investor Joe</h3>
-                                <p class="profile-info">Type of Investor</p>
+                                <img src="res/images/user_avatar.png" alt="" class="img-circle "height="100" width="100"/>
+                                <h3 class="profile-title">Jill</h3>
                             </div>
                         </div>
                     </div>
                     <div></div>
                 </li>
                 <li role="presentation" class="">
-
                     <a href="#" class="toggle-navigation">
-                        Preferences
-                        <i class="icon material-icons">expand_more</i>
+                        Profile
                     </a>
-                    <ul class="list-level-2">
-                        <li role="presentation" class="">
-
-                            <a href="#">
-                                Item 1
-                            </a>
-
-                        </li>
-
-                        <li role="presentation" class="">
-
-                            <a href="#">
-                                Item 2
-                            </a>
-
-                        </li>
-
-                    </ul>
                 </li>
 
                 <li role="presentation" class="">
-
                     <a href="#" class="toggle-navigation">
                         History
-                        <i class="icon material-icons">expand_more</i>
                     </a>
-
-                    <ul class="list-level-2">
-
-
-                        <li role="presentation" class="">
-
-                            <a href="#">
-                                Authentic Motion
-                            </a>
-
-                        </li>
-
-
-                        <li role="presentation" class="">
-
-                            <a href="#">
-                                Smooth Scrolling
-                            </a>
-
-                        </li>
-
-
-                    </ul>
-
                 </li>
-
             </ul>
-
         </nav>
 
         <div class="navigation-drawer-footer">
-
             <p>
-
                 <a href="#" target="_blank">
                     Privacy Policy
                 </a>
@@ -279,61 +241,53 @@
                     Terms of Service
                 </a>
             </p>
-
         </div>
-
     </div>
-
 </aside>
 
 
 <nav class="app-bar  app-bar-has-tabs  elevated-1 app-bar-static app-bar-translucent bg-cyan">
-
-
     <a class="navigation-drawer-toggle" href="#">
-
         <i class="icon icon-lg material-icons text-white">menu</i>
-
     </a>
 
-    <h1 class="title">
-
-		<span class="hidden-sm hidden-xs">
-				components <span class="divider">❯</span>
-		</span>
-
-        Unchained
-
-    </h1>
+    <h1 class="title">Unchained</h1>
 
     <div class="container">
-
         <div class="row">
-            <!--nav-justified-->
             <ul class="nav nav-tabs  nav-tab-yellow" role="tablist">
-                <li role="presentation" class="active"><a  id="home-tab" class="border-green" href="#" aria-controls="home"
-                                                          role="tab" data-toggle="tab" aria-expanded="true"><i class="icon material-icons">home</i></a>
+                <li role="presentation" class="active"><a  id="home-tab" class="border-green" href="#" aria-controls="home" role="tab" data-toggle="tab" aria-expanded="true">List</a>
                 </li>
-                <li role="presentation" class=""><a id="maps-tab" href="#" aria-controls="profile" role="tab" data-toggle="tab"
-                                                    aria-expanded="false">Tab 2</a></li>
+                <li role="presentation" class=""><a id="maps-tab" href="#" aria-controls="profile" role="tab" data-toggle="tab" aria-expanded="false">Map</a></li>
             </ul>
         </div>
     </div>
 </nav>
-
 
 <div class="content-container">
     <div class="container">
         <div id="home" class="row">
             <div id="mycarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
+                    <div class="coupon-top">
+                        <img class="diamond" src="./res/images/diamond.svg">
+                        <span class="distance">300ft</span>
+                        <span class="time">00:00</span> left
+                        <br>
+                        <img class="starred" src="./res/images/star.svg"> 120 people liked this!
+                    </div>
+                    <a href="coupon1.html">
                     <div class="item active">
-                        <img src="res/images/food/brunch_spread.jpg" alt="" class="img-responsive">
+                        <img src="res/images/food/brunch_spread.jpg" class="img-responsive">
+                        
                         <div class="carousel-caption">
-                            <h1>Brunch</h1>
-                            Insert your text here !
+                            <div class="coupon-bottom">
+                                <h1>Brunch for 2</h1>
+                                <s>$30</s> $25 Brunch for 2 people!
+                            </div>
                         </div>
                     </div>
+                    </a>
                 </div>
             </div>
 
@@ -341,13 +295,24 @@
 
             <div id="mycarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
+                    <div class="coupon-top">
+                        <img class="diamond" src="./res/images/diamond.svg">
+                        <span class="distance">350ft</span>
+                        <span class="time">00:00</span> left
+                        <br>
+                        <img class="starred" src="./res/images/star.svg"> 97 people liked this!
+                    </div>
+                    <a href="coupon2.html">
                     <div class="item active">
                         <img src="res/images/food/coffee.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
-                            <h1>Coffee</h1>
-                            Insert your text here !
+                            <div class="coupon-bottom">
+                                <h1>Premium Bean Coffee</h1>
+                                <s>$2.50</s> $1.50 per cup!
+                            </div>
                         </div>
                     </div>
+                    </a>
                 </div>
             </div>
 
@@ -355,13 +320,24 @@
 
             <div id="mycarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
+                    <div class="coupon-top">
+                        <img class="diamond" src="./res/images/diamond.svg">
+                        <span class="distance">350ft</span>
+                        <span class="time">00:00</span> left
+                        <br>
+                        <img class="starred" src="./res/images/star.svg"> 97 people liked this!
+                    </div>
+                    <a href="coupon3.html">
                     <div class="item active">
                         <img src="res/images/food/roasted_pork_and_scrambled_egg_burrito_with_some_red_pepper_salsa.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
-                            <h1>Burrito Deal!</h1>
-                            Insert your text here !
+                            <div class="coupon-bottom">
+                                <h1>Fiesta Grand Burrito</h1>
+                                <s>$12</s> $10 Burrito with Fresh Garden Tomatoes
+                            </div>
                         </div>
                     </div>
+                    </a>
                 </div>
             </div>
 
@@ -369,13 +345,23 @@
 
             <div id="mycarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
+                    <div class="coupon-top">
+                        <span class="distance">350ft</span>
+                        <span class="time">00:00</span> left
+                        <br>
+                        <img class="starred" src="./res/images/star.svg"> 97 people liked this!
+                    </div>
+                    <a href="coupon4.html">
                     <div class="item active">
                         <img src="res/images/food/strawberry_cheesecake.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
-                            <h1>Cheesecake Factory</h1>
-                            Insert your text here !
+                            <div class="coupon-bottom">
+                                <h1>Strawberry Cheesecake</h1>
+                                <s>$5</s> $3.99 per slice!
+                            </div>
                         </div>
                     </div>
+                    </a>
                 </div>
             </div>
 
@@ -383,13 +369,23 @@
 
             <div id="mycarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
+                    <div class="coupon-top">
+                        <span class="distance">350ft</span>
+                        <span class="time">00:00</span> left
+                        <br>
+                        <img class="starred" src="./res/images/star.svg"> 97 people liked this!
+                    </div>
+                    <a href="coupon5.html">
                     <div class="item active">
                         <img src="res/images/food/halal.jpg" alt="" class="img-responsive">
                         <div class="carousel-caption">
-                            <h1>Halal Guys</h1>
-                            Insert your text here !
+                            <div class="coupon-bottom">
+                                <h1>Free Falafel with any Gyro</h1>
+                                $10 for the meal!
+                            </div>
                         </div>
                     </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -403,5 +399,4 @@
 <!--<script type="text/javascript"-->
         <!--src="https://raw.githubusercontent.com/liabru/jquery-match-height/master/jquery.matchHeight-min.js"></script>-->
 </body>
-
 </html>
